guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-service
spec:
  type: NodePort
  selector:
    app: guestbook-ui
  ports:
    - port: 80          # The port accessible inside the cluster
      targetPort: 80  # The port your application container listens on
      nodePort: 30081
